--- a/frontend/src/view/admin/Component/SubjectTab.css
+++ b/frontend/src/view/admin/Component/SubjectTab.css
@@ -4,13 +4,13 @@
 
 .add-subject-area{
   width:fit-content;
-  height: 300px;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-content: center;
   justify-content: space-around;
   padding: 20px 70px;
-  border: 1px solid gray;
+  border: 0px solid gray;
   border-radius: 10px;
 }
 
