--- a/frontend/src/view/admin/Component/UserTab.css
+++ b/frontend/src/view/admin/Component/UserTab.css
@@ -1,4 +1,34 @@
 .dropDown {
-    width: 250px
+    width: 400px
 }
 
+.box-container{
+    width: 75%;
+    height: 80vh;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.selection-area{
+    width: 15vw;
+    height: auto;
+    padding: 50px 20px;
+    border: 1px solid #dee2e6;
+}
+
+.selection-area button{
+    width: 150px;
+}
+
+.data-table{
+    width: 55vw;
+    height: auto;
+}
+
+.table-scroll{
+    width: 100% ;
+    height: 100%;
+    overflow: scroll;
+}
