--- a/frontend/src/view/admin/Component/UserTab.css
+++ b/frontend/src/view/admin/Component/UserTab.css
@@ -19,12 +19,14 @@
 }
 
 .selection-area button{
-    width: 150px;
+    width: 100%;
+    margin-top: 20px;
 }
 
 .data-table{
     width: 55vw;
     height: auto;
+    border: 1px solid #dee2e6;
 }
 
 .table-scroll{
