--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -50,28 +50,6 @@
 }
 
 
-.popup {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  background-color: rgba(0,0,0, 0.5);
-}
-.popup_inner {
-  position: absolute;
-  left: 25%;
-  right: 25%;
-  top: 25%;
-  bottom: 25%;
-  margin: auto;
-  background: white;
-  border-radius: 20px;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -97,12 +75,62 @@
 }
 
 
-.custom_pop{
+.popup {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background-color: rgba(0,0,0, 0.5);
+}
 
-  width: fit-content;
+.popup_inner {
+  width: 35%;
+  height: fit-content;
+  padding: 0;
+  position: absolute;
+  left: 25%;
+  right: 25%;
+  top: 25%;
+  bottom: 25%;
+  margin: auto;
+  background: white;
+  border-radius: 20px;
+  text-align: left;
+}
+
+.popup_inner h2{
+  text-align: center;
+}
+
+
+.custom_pop{
+  width: 80%;
+  height: fit-content;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-content: center;
-  justify-content: space-around;
-  padding: 50px 150px;
+  justify-content: space-evenly;
+  padding: 50px 50px 80px 50px;
+  border: 0px solid #dee2e6;
+  border-radius: 20px;
+}
+
+.custom_pop button{
+   width: 100px;
+   height: auto;
+}
+
+.custom_pop .popup-button-area{
+  width: 220px;
+  height: auto;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-between;
 }
