--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -60,7 +60,6 @@
   height: fit-content;
   padding: 10px 10px 0 10px;
   text-align: left;
-  /* border: 1px solid blue; */
 }
 
 .main-title-area h1{
@@ -74,6 +73,7 @@
 }
 
 .tab-area{
+  width: 100%;
   height: 100%;
 }
 
